--- a/packages/lsp-server/package.json
+++ b/packages/lsp-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@514labs/moose-lsp",
-  "version": "0.1.0",
+  "version": "1.2.0",
   "description": "Language Server for Moose TypeScript projects",
   "license": "MIT",
   "repository": {
@@ -36,15 +36,15 @@
   },
   "dependencies": {
     "@514labs/moose-sql-validator-wasm": "workspace:*",
-    "glob": "^10.5.0",
-    "tree-sitter": "^0.25.0",
-    "tree-sitter-python": "^0.25.0",
+    "glob": "^13.0.0",
+    "web-tree-sitter": "^0.26.5",
     "typescript": "^5.9.3",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.12"
   },
   "devDependencies": {
-    "@types/node": "^20.19.32",
+    "@types/node": "^24.10.11",
+    "tree-sitter-python": "^0.25.0",
     "tsup": "^8.5.1"
   }
 }
