create release when publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -307,3 +307,22 @@ jobs:
           else
             ovsx publish "${vsix_files[0]}"
           fi
+
+  create-release:
+    needs: [build, publish-npm, publish-vscode, publish-openvsx]
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Create git tag and GitHub release
+        env:
+          GH_TOKEN: ${{ github.token }}
+          VERSION: ${{ needs.build.outputs.version }}
+        run: |
+          git tag "v${VERSION}"
+          git push origin "v${VERSION}"
+          gh release create "v${VERSION}" --title "v${VERSION}" --generate-notes
